style(link): improve the code style