@@ -1,41 +1,44 @@
+/*
+ * Copyright 2024 European Union. All rights reserved.
+ * European Union EUPL version 1.1.
+ */
+
 package eu.domibus.connectorplugins.link.gwwspullplugin;
 
 import eu.domibus.connector.domain.enums.LinkType;
-import eu.domibus.connector.link.service.PullFromLinkPartner;
-import eu.domibus.connector.link.service.SubmitToLinkPartner;
 import eu.domibus.connector.domain.model.DomibusConnectorLinkConfiguration;
 import eu.domibus.connector.domain.model.DomibusConnectorLinkPartner;
-import eu.domibus.connector.link.api.*;
-
+import eu.domibus.connector.link.api.ActiveLink;
+import eu.domibus.connector.link.api.ActiveLinkPartner;
+import eu.domibus.connector.link.api.LinkPlugin;
+import eu.domibus.connector.link.api.PluginFeature;
+import eu.domibus.connector.link.service.PullFromLinkPartner;
+import eu.domibus.connector.link.service.SubmitToLinkPartner;
 import eu.domibus.connector.link.utils.LinkPluginUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.quartz.Scheduler;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ConfigurableApplicationContext;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.quartz.Scheduler;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ConfigurableApplicationContext;
 
-
+/**
+ * The DCGatewayPullPlugin class is an implementation of the LinkPlugin interface that handles
+ * configuration and management of the Gateway Pull Plugin for Domibus.
+ */
 public class DCGatewayPullPlugin implements LinkPlugin {
-
-    private final static Logger LOGGER = LogManager.getLogger(DCGatewayPullPlugin.class);
-
+    private static final Logger LOGGER = LogManager.getLogger(DCGatewayPullPlugin.class);
     public static final String IMPL_NAME = "gwwspullplugin";
-
     @Autowired
     ConfigurableApplicationContext applicationContext;
-
     @Autowired
     Scheduler scheduler;
-
     private SubmitToLinkPartner submitToLink;
-
     private PullFromLinkPartner pullFromLink;
 
     @Override
@@ -53,16 +56,17 @@ public class DCGatewayPullPlugin implements LinkPlugin {
 
         LOGGER.info("Starting Configuration for [{}]", linkConfiguration);
 
-        ConfigurableApplicationContext childCtx = LinkPluginUtils.getChildContextBuilder(applicationContext)
-                .withDomibusConnectorLinkConfiguration(linkConfiguration)
-                .withSources(DCGatewayPullPluginConfiguration.class)
-                .withProfiles(DCGatewayPullPluginConfiguration.DC_GATEWAY_PULL_PLUGIN_PROFILE)
-                .run();
-
+        ConfigurableApplicationContext childCtx =
+            LinkPluginUtils.getChildContextBuilder(applicationContext)
+                           .withDomibusConnectorLinkConfiguration(linkConfiguration)
+                           .withSources(DCGatewayPullPluginConfiguration.class)
+                           .withProfiles(
+                               DCGatewayPullPluginConfiguration.DC_GATEWAY_PULL_PLUGIN_PROFILE)
+                           .run();
 
         this.submitToLink = childCtx.getBean(SubmitToLinkPartner.class);
 
-        ActiveLink activeLink = new ActiveLink();
+        var activeLink = new ActiveLink();
         activeLink.setLinkConfiguration(linkConfiguration);
         activeLink.setChildContext(childCtx);
         activeLink.setSubmitToLink(submitToLink);
@@ -82,8 +86,9 @@ public class DCGatewayPullPlugin implements LinkPlugin {
     }
 
     @Override
-    public ActiveLinkPartner enableLinkPartner(DomibusConnectorLinkPartner linkPartner, ActiveLink activeLink) {
-        ActiveLinkPartner activeLinkPartner = new ActiveLinkPartner();
+    public ActiveLinkPartner enableLinkPartner(
+        DomibusConnectorLinkPartner linkPartner, ActiveLink activeLink) {
+        var activeLinkPartner = new ActiveLinkPartner();
         activeLinkPartner.setParentLink(activeLink);
         activeLinkPartner.setLinkPartner(linkPartner);
         return activeLinkPartner;
@@ -107,17 +112,19 @@ public class DCGatewayPullPlugin implements LinkPlugin {
     @Override
     public List<PluginFeature> getFeatures() {
         return Stream.of(
-                        PluginFeature.RCV_PULL_MODE,
-                        PluginFeature.SEND_PUSH_MODE,
-                        PluginFeature.GATEWAY_PLUGIN,
-                        PluginFeature.SUPPORTS_LINK_PARTNER_SHUTDOWN,
-                        PluginFeature.SUPPORTS_LINK_SHUTDOWN)
-                .collect(Collectors.toList());
+                         PluginFeature.RCV_PULL_MODE,
+                         PluginFeature.SEND_PUSH_MODE,
+                         PluginFeature.GATEWAY_PLUGIN,
+                         PluginFeature.SUPPORTS_LINK_PARTNER_SHUTDOWN,
+                         PluginFeature.SUPPORTS_LINK_SHUTDOWN
+                     )
+                     .toList();
     }
 
     @Override
     public List<Class<?>> getPluginConfigurationProperties() {
-        return Stream.of(DCGatewayPullPluginConfigurationProperties.class).collect(Collectors.toList());
+        return Stream.of(DCGatewayPullPluginConfigurationProperties.class)
+                     .collect(Collectors.toList());
     }
 
     @Override
@@ -129,5 +136,4 @@ public class DCGatewayPullPlugin implements LinkPlugin {
     public Set<LinkType> getSupportedLinkTypes() {
         return Stream.of(LinkType.GATEWAY).collect(Collectors.toSet());
     }
-
 }
